# pvr.jellyfin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.android-build  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  addon.xml.in  pvr.jellyfin.txt
.github/workflows/: build-android-arm32.yml  build.yml
devlog/: LiveTVChannels example response  README.md  browser livetv network log  kodilog202511070029.txt  kodilog202511070041.txt  kodilog202511070048.txt  kodilog202511070104.txt  kodilog202511070155.txt  kodilog202511070158.txt  kodilog202511070159.txt  kodilog202511070201.txt  kodilog202511070210.txt  kodilog202511070232.txt  kodilog202511070239.txt  kodilog202511070245.txt  kodilog202511070252.txt  kodilog202511070255.txt  kodilog202511070307.txt  kodilog202511070309.txt  kodilog202511070313.txt  kodilog202511072106.txt  kodilog202511072128.txt  kodilog202511072132.txt  kodilog202511072142.txt  kodilog202511072254.txt  kodilog202511081309.txt  kodilog202511081955.txt  kodilog202511082000.txt  kodilog202511082035.txt  kodilog202511082036.txt  kodilog202511082043.txt  kodilog202511082049.txt  kodilog202511082051.txt  kodilog202511082057.txt  kodilog202511082101.txt  kodilog202511082110.txt  kodilog202511082115.txt  kodilog202511082125.txt  kodilog202511082130.txt  kodilog202511082144.txt  (+2 more)
devlog/apitest/: .gitkeep  202511081350_auth_response.json  202511081350_channel_info_TOKEN.json  202511081350_playbackinfo_minimal.json  202511081350_playbackinfo_none.json  202511081350_playbackinfo_params.json  202511081350_playbackinfo_v1.json  202511081350_playbackinfo_v2.json  202511081402_auth_response.json  202511081402_channel_info_TOKEN.json  202511081402_playbackinfo_minimal.json  202511081402_playbackinfo_none.json  202511081402_playbackinfo_params.json  202511081402_playbackinfo_v1.json  202511081402_playbackinfo_v2.json  202511081402_playbackinfo_with_autoopen.json  202511081956_auth_response.json  202511081956_playbackinfo_minimal.json  202511081956_playbackinfo_none.json  202511081956_playbackinfo_params.json  202511081956_playbackinfo_v1.json  202511081956_playbackinfo_v2.json  202511081956_playbackinfo_with_autoopen.json  202511081958_auth_response.json  202511081958_channel_info_TOKEN.json  202511081958_playbackinfo_minimal.json  202511081958_playbackinfo_none.json  202511081958_playbackinfo_params.json  202511081958_playbackinfo_v1.json  202511081958_playbackinfo_v2.json  202511081958_playbackinfo_with_autoopen.json  202511081958_user_items.json  202511082032_auth_response.json  202511082032_channel_info_error_APIKEY.json  202511082032_livetv_channel.json  202511082032_playbackinfo_minimal.json  202511082032_playbackinfo_none.json  202511082032_playbackinfo_params.json  202511082032_playbackinfo_passthrough.json  202511082032_playbackinfo_v1.json  (+32 more)
docs/: API.md  DEVELOPMENT.md  FAQ.md  GITHUB_OAUTH_SETUP.md  INSTALLATION.md  LIVE_TV_PLAYBACK_FIX.md  TESTING.md
package-repo/repository.jellyfin.pvr/: README.md  addon.xml  icon.png.placeholder  icon.png.todo
package/pvr.jellyfin/src/jellyfin/: ChannelManager.cpp  ChannelManager.h
package/pvr.jellyfin/src/utilities/: Logger.cpp
repository/: README.md  addons.xml  addons.xml.md5
repository/repository.jellyfin.pvr/: addon.xml
resources/: PLACEHOLDER.txt  settings.xml
resources/language/resource.language.en_gb/: strings.po
scripts/: README-LOCAL-BUILD.md  build-local-android.sh  build.sh  increment_version.sh  package.sh  package_repo.sh  test_jellyfin_api.config  test_jellyfin_api.sh  update_addons_xml.sh  update_repo.py  upload-jellyfin-log.sh
src/: client.cpp  client.h
src/jellyfin/: AuthManager.cpp  AuthManager.h  ChannelManager.cpp  Connection.cpp  Connection.h  EPGManager.cpp  EPGManager.h  JellyfinClient.cpp  JellyfinClient.h  RecordingManager.cpp  RecordingManager.h
src/utilities/: LogUploader.cpp  LogUploader.h  Logger.cpp  Logger.h  Utilities.cpp  Utilities.h
